src/main/java/mitsuko_plugin/Mitsuko.bnf
{
  parserClass="mitsuko_plugin.parser.MitsukoParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Mitsuko"
  psiImplClassSuffix="Impl"
  psiPackage="mitsuko_plugin.psi"
  psiImplPackage="mitsuko_plugin.psi.impl"

  elementTypeHolderClass="mitsuko_plugin.psi.MitsukoTypes"
  elementTypeClass="mitsuko_plugin.psi.MitsukoElementType"
  tokenTypeClass="mitsuko_plugin.psi.MitsukoTokenType"
}

mitsukoFile ::= (FUNCTION_FILE | PACK_FILE | ITEM_FILE)?


PACK_FILE ::= HEADER_PACK_FILE (PACK_TAG | CRLF)+

PACK_TAG ::= TAG_NAME EQUALS TAG_VALUE


ITEM_FILE ::= HEADER_ITEM_FILE ((ITEM_GROUP BLOCK_OPEN (ITEM_CONTENT)+ BLOCK_CLOSE) | (ITEM_GROUP EQUALS TAG_VALUE))+

ITEM_CONTENT ::= NBT_STRING | (TAG_NAME EQUALS TAG_VALUE) | (CODE | COMMENT | CRLF)+



FUNCTION_FILE ::= HEADER_FN_FILE (TAG|COMMENT|CRLF|FUNCTION)+

FUNCTION ::= FN_DEFINE FN_OPEN LINES FN_CLOSE

// FN_BODY ::= FN_OPEN (CODE | COMMENT | CRLF)* FN_CLOSE

LINES ::= ((CODE+ CRLF) | COMMENT | CRLF)*

CODE ::= BLOCK |
        MULTILINE |
        FN_CALL |
        ONELINE
        
ONELINE ::= (CODE_CUSTOM | COMMAND_START | SHORT_SCORE | VALUE) 
            ((SCOREBOARD !(SCORE_OPERATION)) | VALUE | EQUALS | (E_SELECTOR !EQUALS) | 
            SUB_CUSTOM | PIDENT | (EXE_SUB CODE CRLF) | EXE_SUB | SUB_1 | SUB_2 | SUB_UNKNOWN | NBT)* 
            (!CRLF CODE)?


MULTILINE ::= (FLOW | FOR | (CODE_CUSTOM PIDENT)) CODE?

FOR ::= CODE_CUSTOM PARENS SCOREBOARD COMMA (PIDENT | VALUE) (COMMA (PIDENT | VALUE))? PARENS

FLOW ::= FLOW_CONTROL PARENS (CONDITION)+ PARENS

BLOCK ::= BLOCK_OPEN LINES BLOCK_CLOSE

CONDITION ::= (SUB_1 | SUB_2 | SUB_UNKNOWN | SCOREBOARD | (E_SELECTOR !EQUALS) | SCORE_OPERATION | PIDENT | NBT | VALUE)+

TAG ::= (TAG_DEF TAG_NAME EQUALS TAG_VALUE TAG_DEF) {methods=[getName]}

FN_DEFINE ::= (FN_KEYWORD FN_NAME) 

NBT ::= (NBT_BRACES NBT_INTERNAL*) | (NBT_STRING+)

NBT_INTERNAL ::= (NBT_PROPERTY | (EQUALS NBT_INTERNAL) | COMMA | NBT_VALUE | NBT_STRING | CODE_CUSTOM | NBT_BRACES | VALUE)

E_SELECTOR ::= SELECTOR NBT?

SCOREBOARD ::= (E_SELECTOR EQUALS SCORE_NAME) | (SCOREBOARD_TEMP) | VALUE

SHORT_SCORE ::= (SCOREBOARD SCORE_OPERATION ((SCOREBOARD !(SCORE_OPERATION)) | PIDENT | CODE)?) | (SCOREBOARD CRLF) 
